Port One Kick to NeoForge 1.21.1